feat(MangoDB): simple mangoDB with user and email for auth
